added some features
now you can try to get some more information so this is more likely "axe
checker" and can be useful while PUGing. Althouth, it seems like file
JSONArray.class doesn't contains any JSONArray's classes, methods or
something but i'm too fucking tired to solve it now